[package]
name = "dst-vis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
env_logger = "0.11.8"
log = "0.4.27"
pollster = "0.4.0"
wgpu = "25.0.2"
winit = "0.30.11"

[dependencies.bytemuck]
version = "1.23.0"
features = ["derive"]

